# Wechat-Clawhub-demo

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md
.claude/: settings.local.json
apps/desktop-launcher/: README.md  pyproject.toml
apps/desktop-launcher/launcher/: __init__.py  app.py  environment.py  main.py  models.py  network.py  process_manager.py  profile_store.py  redis_runtime.py  runtime.py  wechat_status_presenter.py
apps/desktop-launcher/tests/: test_gateway_proxy_resolution.py  test_launcher_main.py  test_launcher_runtime_model.py  test_local_node_channel_assessment.py  test_local_node_channel_assessment_state.py  test_local_node_connectivity_check.py  test_local_node_model_config.py  test_local_node_runtime_status.py  test_process_manager_local_node.py  test_runtime_import_preference.py  test_worker_model_env_migration.py
apps/gateway/: .env.example  README.md  pyproject.toml
apps/gateway/app/: __init__.py  main.py
apps/gateway/tests/: test_dispatch_queue.py  test_dispatch_scheduler.py  test_gateway_refresh_reading.py  test_gateway_summary_service.py  test_inbound_aggregation.py  test_network_utils.py  test_node_auth.py  test_node_diagnostics_stream.py  test_nodes_route.py  test_openai_compatible_client.py  test_outgoing_dispatcher.py  test_public_entry_service.py  test_redis_store.py  test_session_manager_agent_binding.py  test_session_message_windows.py  test_setup_service.py  test_user_data_store.py  test_wechat_bot.py  test_wechat_media_store.py  test_wechat_mp_route.py  test_wechat_official_account.py
services/claw-node/: README.md  pyproject.toml
services/claw-node/claw_node/: channel_assessment.py  config.py  diagnostics.py  dify_client.py  discovery_service.py  gateway_client.py  inference.py  local_cache.py  main.py  multimodal.py  node_identity.py  openai_compatible_client.py  worker.py
services/claw-node/tests/: test_channel_assessment.py  test_config.py  test_diagnostics.py  test_dify_client.py  test_gateway_client.py  test_node_identity.py  test_openai_compatible_client.py  test_worker.py
(+228 files in other folders)
