[project]
name = "wechat-claw-hub-gateway"
version = "0.1.0"
description = "Gateway service for wechat-claw-hub."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "pycryptodome>=3.20.0,<4.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "qrcode[pil]>=7.4.2,<8.0.0",
  "redis>=5.0.8,<6.0.0",
  "uvicorn[standard]>=0.30.6,<1.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
