[project]
name = "wechat-claw-hub-claw-node"
version = "0.1.0"
description = "Windows worker node for wechat-claw-hub."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "redis>=5.0.8,<6.0.0",
  "websockets>=11.0.0,<16.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["claw_node*"]
